# libgb

./: CMakeLists.txt  meson.build
include/: CMakeLists.txt  libgb.h
src/: CMakeLists.txt  libgb.c
